--- a/lecture/1-navbar/index.html
+++ b/lecture/1-navbar/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Often, the header contains a logo and a nav component -->
     <header>
       <p id="header-logo">Ben's Blog</p>
-      <nav class="navbar">
-        <ul>
+      <nav>
+        <!-- It is common to put a ul inside with links as list items -->
+        <ul id="nav-links">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
