--- a/lecture/0-flexbox-demo/index.html
+++ b/lecture/0-flexbox-demo/index.html
@@ -7,13 +7,13 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="flex-container" id="squares-container">
-      <div class="square flex-item" id="one">1</div>
-      <div class="square flex-item" id="two">2</div>
-      <div class="square flex-item" id="three">3</div>
-      <div class="square flex-item" id="four">4</div>
-      <div class="square flex-item" id="five">5</div>
-      <div class="square flex-item" id="six">6</div>
-    </div>
+    <main class="flex-container" id="squares-container">
+      <section class="square flex-item" id="one">1</section>
+      <section class="square flex-item" id="two">2</section>
+      <section class="square flex-item" id="three">3</section>
+      <section class="square flex-item" id="four">4</section>
+      <section class="square flex-item" id="five">5</section>
+      <section class="square flex-item" id="six">6</section>
+    </main>
   </body>
 </html>
